--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "waifu.it",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Official wrapper for waifu.it!",
   "main": "index.js",
   "types": "index.d.ts",
@@ -8,10 +8,7 @@
     "test": "node __tests__/endpoints.js"
   },
   "baseurl": "https://waifu.it/api",
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/kyrea/waifu.it.git"
-  },
+  "repository": "git+ssh://git@github.com/kyrea/waifu.it.git",
   "keywords": [
     "anime",
     "generator",
@@ -21,7 +18,7 @@
     "bot"
   ],
   "author": "aeryk",
-  "license": "AGPLv3",
+  "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/kyrea/waifu.it/issues"
   },
