Updated the api base url

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "waifu.it",
-  "version": "1.1.1",
+  "version": "1.2.1",
   "description": "Official wrapper for waifu.it!",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
     "test": "node __tests__/endpoints.js"
   },
-  "baseurl": "https://waifu.it/api",
+  "baseurl": "https://waifu.it/api/v4",
   "repository": "git+ssh://git@github.com/kyrea/waifu.it.git",
   "keywords": [
     "anime",
